// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Should not render main menu 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 igVAgp"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox-sc-13pk1d4-0 bJLlyS"
    />
  </div>
</div>
`;

exports[`Header Should render main menu 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 igVAgp"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox-sc-13pk1d4-0 bJLlyS"
    >
      <a
        className="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        Invoices
      </a>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <a
        className="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        Contacts
      </a>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <a
        className="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
        href="/api/users/logout"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Logout
      </a>
    </div>
  </div>
</div>
`;
